[metadata]
name = vclouddirector
summary = Client library for vCloud Director
description-file =
    README.org
author-email = cameron.lopez@rackspace.com
home-page = https://www.github.com/rcbops-qa/vclouddirector
classifier =
    Environment :: Console
    Environment :: vCloud Director
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python

[files]
packages =
    vclouddirector

# [entry_points]
# console_scripts =
#      = vclouddirector.cli:main
